kubernetes/apps/base/kasm-firefox/service-file-browser.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefox-files
spec:
  selector:
    app: firefox
  ports:
    - name: http
      port: 8080
      targetPort: 8080
