kubernetes/apps/base/kasm-firefox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefox
spec:
  selector:
    app: firefox
  ports:
    - name: http
      port: 3000
      targetPort: 3000
