kubernetes/apps/base/kasm-firefox/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: firefox
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`docs.${hidden_domain}`)
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
      services:
        - name: firefox
          port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: firefox-files
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`catalog.${hidden_domain}`)
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
      services:
        - name: firefox-files
          port: 8080
