kubernetes/apps/base/kasm-firefox/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: firefox
spec:
    entryPoints:
        - ENC[AES256_GCM,data:XdFM,iv:kJlXKRNgBhDA71pzTtGfUtACXiuitN5mITGazkBND9Y=,tag:OXwGGgjiL2vCvD69tz4Phg==,type:str]
    routes:
        - match: ENC[AES256_GCM,data:ulQT85RYQ2of+lU6MB/Gl/lzXocjrmd7jvITvM/+OvLGSly+SH5z,iv:DD1X63NNklTOwZNAISEGge2ZkiVGak5/sgn6JLG9qRc=,tag:5l887Sm53nCtXQ5uJ7Lasg==,type:str]
          kind: ENC[AES256_GCM,data:WA/VYQ==,iv:r4UATTnOBNAFpkhZXJxttU6kxMxiUjZln3iML5NACCs=,tag:OYo3b8WI3D1p5YAW85z+gw==,type:str]
          services:
            - name: ENC[AES256_GCM,data:wNr5vQMMkA==,iv:t9SxvOhR4AObnxKBpYhzVdaQ9plbzyssSMKVVulfxvo=,tag:VnpVtHThKsRel8hoYkYjbw==,type:str]
              port: ENC[AES256_GCM,data:9ms+xw==,iv:CpHWAIYT+PWf5VL1OEbUkSg9TvZbJpvIzaZh3WxxJ2I=,tag:VUH2YlwRQHJocWQQ9mqIYw==,type:int]
sops:
    age:
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTUm1xNDhWK09xTTNIT2NJ
[...]
            BFS5ALbC5XxnRHmXaVj0ETwbesORXdgq9KZtgmFjZQfuzHBEWsWZcw==
            -----END AGE ENCRYPTED FILE-----
          recipient: age19azmnl8ee2f4r95jnwvr47uhllf33eq66dfc3vuxezq7k5vwqgfsyrdv8n
    encrypted_regex: ^(data|stringData|spec)$
    lastmodified: "2026-06-13T02:45:32Z"
    mac: ENC[AES256_GCM,data:nQfYN92iAZPL67Bm1PU+BMS6DpjKpY9krMbtNbgZOtpjbvKB9f9m21aLsaF0iq8e7WB3s4VRUxODHrfE0WfNqnyfUNBJON4GBstkNQRcukQx5OY0vi3MhsYCvnt5wMsux+BtH92jtBmnxhbC79731V7JcGm07njkycVMGfV6VvQ=,iv:RnLPvi66LzZafOD1QS8Yt0T+pLDxpRo4jTHtm8/etGg=,tag:9+51N8ikIOfPpnnXxskD0g==,type:str]
    version: 3.13.1
